--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/ZachQin/checkmate#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "typescript": "^5.1.6"
   },
   "workspaces": [
