--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "checkmate",
+  "name": "duochat",
   "version": "0.0.1",
   "description": "An LLM-based library orchestrating iterative task execution and verification through AI-powered dialogues.",
   "main": "./dist/index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ZachQin/checkmate.git"
+    "url": "git+https://github.com/ZachQin/DuoChat.git"
   },
   "keywords": [
     "LLM",
@@ -24,9 +24,9 @@
   "author": "Zach Qin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ZachQin/checkmate/issues"
+    "url": "https://github.com/ZachQin/DuoChat/issues"
   },
-  "homepage": "https://github.com/ZachQin/checkmate#readme",
+  "homepage": "https://github.com/ZachQin/DuoChat#readme",
   "dependencies": {
     "axios": "^1.4.0",
     "typescript": "^5.1.6"
